kube-deployment - Copy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kubeapi
spec:
  selector:
    app: kube
    #tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapi
spec:
  selector:
    matchLabels:
      app: kube    
  replicas: 2
  template:
    metadata:
      labels:
        app: kube      
    spec:
      containers:
        - name: kubeapi
          image: acrkubecde.azurecr.io/kubeapi:v4
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubeui
spec:
  loadBalancerIP: 52.179.6.87  
  selector:
    app: kube  
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeui
spec:
  selector:
    matchLabels:
      app: kube     
  replicas: 2
  template:
    metadata:
      labels:
        app: kube      
    spec:
      containers:
      - name: kubeui
        image: acrkubecde.azurecr.io/kubeui:v3

#Dashboard
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
  - image: nginx:1.15.5
    name: mypod
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 250m
        memory: 256Mi
    volumeMounts:
      - name: azure
        mountPath: /mnt/azure
  volumes:
      - name: azure
        azureDisk:
          kind: Managed
          diskName: myAKSDisk
          diskURI: /subscriptions/585c6789-4e5e-48d3-a721-7cd5a6558aaa/resourceGroups/MC_myResourceGroup_myAKSCluster_eastus/providers/Microsoft.Compute/disks/myAKSDisk
